# code-challenges

./: .bazelignore  .bazelrc  .eslintrc.cjs  .gitignore  .npmrc  .prettierrc.cjs  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
.github/workflows/: github-pages.yml  test.yml
challenges/day-01/: BUILD.bazel  README.md
challenges/day-01/src/: main.rs  substring.rs
challenges/day-02/: BUILD.bazel  README.md  index.html  package.json  vite.config.ts
challenges/day-02/tests/: tsconfig.json
challenges/day-03/: BUILD.bazel  README.md
challenges/day-03/hello-tray-app/: hello_tray_appApp.swift
challenges/day-03/hello-tray-app.xcodeproj/: project.pbxproj
challenges/day-03/hello-tray-app/Assets.xcassets/tray.imageset/: Contents.json
challenges/day-04/: BUILD.bazel  README.md  package.json  tsconfig.json
challenges/day-04/src/: App.tsx  index.css
challenges/day-04/src/components/Clock/: index.module.css  index.tsx  types.ts
challenges/day-04/src/components/Date/: index.module.css  index.tsx
challenges/day-04/src/components/DayOfWeek/: index.module.css  index.tsx
challenges/day-04/src/components/Grid/: GridCell.tsx  index.module.css  index.tsx
challenges/day-04/src/components/Time/: index.module.css  index.tsx
challenges/day-04/src/components/Wheel/: index.module.css  index.tsx
challenges/day-04/src/utils/: types.ts
challenges/day-05/: README.md
challenges/day-05/hello/: BUILD.bazel  go.mod  hello.go  hello_test.go
challenges/day-05/main/: BUILD.bazel  go.mod  main.go
challenges/day-06/: BUILD.bazel  README.md  index.html  package.json  vite.config.ts
challenges/day-06/src/: App.css  App.tsx
challenges/day-06/src/utils/: add.ts
pages/: BUILD.bazel  README.md
tools/: BUILD.bazel  README.md
