load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Loads the `rules_rust` repository rule
# See https://github.com/bazelbuild/rules_rust/releases
http_archive(
    name = "rules_rust",
    sha256 = "db89135f4d1eaa047b9f5518ba4037284b43fc87386d08c1d1fe91708e3730ae",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.27.0/rules_rust-v0.27.0.tar.gz"],
)

# Loads the `rules_rust_dependencies` and `rust_register_toolchains` function definitions
load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

# Adds the necessary dependencies for the Rust rules
rules_rust_dependencies()

# Registers Rust toolchains with the given versions and editions
rust_register_toolchains(
    # Specifies the Rust edition to use for the registered toolchains
    edition = "2021",
    versions = ["1.72.0"],
)
