# Loads the Rust rules and the `rust_binary` & `rust_test` function definitions
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

# Declares a Rust binary target with the given name
rust_binary(
    name = "day_01",

    # Specifies the source file for the binary
    srcs = glob([
        "src/**/*.rs",
    ]),

    # Specifies the Rust edition to use for this binary
    edition = "2021",
)

# Declares a Rust test target with the given name
rust_test(
    name = "day_01_test",

    # Uses the same crate name as the underlying “:day_01” crate
    crate = ":day_01",

    # Specifies the Rust edition to use for this test
    edition = "2021",
)
